--- a/assets/styles/sass/mindmap/mindmap.scss
+++ b/assets/styles/sass/mindmap/mindmap.scss
@@ -68,15 +68,13 @@ g:not([id=""]):hover > circle[name=lx], g:not([id=""]):hover > circle[name=rx] {
 }
 
 #editBox {
-  cursor: pointer;
+  cursor: default;
   display: none;
-  position: fixed;
   z-index: 10;
-  top: 80px;
-  right: 10px;
   background: white;
   width: 300px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  margin-bottom:10px;
 }
 
 #editBox h3 {
@@ -154,20 +152,27 @@ color:#2196f3;
 
   display: block;
 }
-
+#workside {
+    bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    left: 10px;
+    position: fixed;
+    top: 75px;
+}
+#chatSection {
+	flex:1;
+}
 #chatBox {
   cursor: default;
   font-family: Roboto;
-  position: fixed;
-  top: 80px;
-  left: 10px;
+  position: relative;
 
-  bottom: 10px;
   background: white;
   z-index: 9;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   width: 300px;
-
+  height:100%;
   display: none;
 }
 
@@ -180,23 +185,25 @@ color:#2196f3;
 .boxTitle {
   text-align: center;
   padding: 5px 5px;
-  line-height: 24px;
-  height: 32px;
+  line-height: 30px;
+  height: 40px;
   font-weight: bold;
   color: #fff;
   background-color: #2196f3;
+  font-size:17px;
 }
 
 .closer {
   position: absolute;
   right: 5px;
   color:white;
+  top:8px;
 }
 
 #chatBoxScroller {
   position: absolute;
-  top: 36px;
-  bottom: 38px;
+  top: 40px;
+  bottom: 39px;
   left: 0;
   right: 0;
   overflow-y: auto;
