mindmap canvas bug on risze fixed

--- a/views/layouts/mindmap.ejs
+++ b/views/layouts/mindmap.ejs
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <main class="section top-attached" style="padding: 0;height:100%;">
+    <main class="section top-attached" style="padding: 0;width:100%;height:100%;">
         <%- body %>
     </main>
 
