--- a/views/mindmap/index.ejs
+++ b/views/mindmap/index.ejs
@@ -3,11 +3,26 @@
 	 
 <div id="workside">
 
-
-
-	<div id="editBox">
+	<ul id="workselecter">
+		<li name="editBox">&#x270F; Édition d'un noeud</li>
+		<li name="permBox">&#x270B; Permissions d'un noeud</li>
+	</ul>
+	
+	<div class="box" id="permBox">
 
 		<div class="boxTitle">
+			<div class="boxSelecter">&#x25BE; &#x270B; </div>
+			Permissions d'un noeud
+		</div>
+		
+		<h2>Yolo</h2>
+		
+	</div>
+
+	<div class="box" id="editBox">
+
+		<div class="boxTitle">
+			<div class="boxSelecter">&#x25BE; &#x270F; </div>
 			Édition d'un noeud
 		</div>
 
