--- a/views/mindmap/index.ejs
+++ b/views/mindmap/index.ejs
@@ -15,8 +15,132 @@
 			Permissions d'un noeud
 		</div>
 		
-		<h2>Yolo</h2>
-		
+		<div id="permBoxSearch">
+			<input type="text" class="simpleTextfield" placeholder="Rechercher un utilisateur ou un groupe" id="chatBoxInputElement" />
+			<span>
+				&#x1F50D;
+			</span>
+		</div>
+		<div id="permBoxResult">
+			<span><i class="material-icons entity">account_circle</i> Benji Chaz (propriétaire)</span>
+			<div class="perms">
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" disabled checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">visibility</i>
+				  </label>
+				 </div>
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" disabled checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">create</i>
+				  </label>
+				 </div>
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" disabled checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">delete</i>
+				  </label>
+				 </div>
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" disabled checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">lock_open</i>
+				  </label>
+				 </div>
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" disabled checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">assignment_ind</i>
+				  </label>
+				 </div>
+			</div>
+			
+			<span><i class="material-icons entity">group_work</i> Administrateurs</span>
+			<div class="perms">
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">visibility</i>
+				  </label>
+				 </div>
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">create</i>
+				  </label>
+				 </div>
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">delete</i>
+				  </label>
+				 </div>
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">lock_open</i>
+				  </label>
+				 </div>
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">assignment_ind</i>
+				  </label>
+				 </div>
+			</div>
+			
+			<span><i class="material-icons entity">account_circle</i> John Doe</span>
+			<div class="perms">
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">visibility</i>
+				  </label>
+				 </div>
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">create</i>
+				  </label>
+				 </div>
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">delete</i>
+				  </label>
+				 </div>
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">lock_open</i>
+				  </label>
+				 </div>
+				<div>
+				  <label>
+					<input type="checkbox" class="rightpicker" checked="checked" />
+					<span>&#x2713;</span>
+					<i class="material-icons">assignment_ind</i>
+				  </label>
+				 </div>
+			</div>
+			
+
+		</div>
 	</div>
 
 	<div class="box" id="editBox">
