user/group search logic in perm form implemented

--- a/views/mindmap/index.ejs
+++ b/views/mindmap/index.ejs
@@ -16,7 +16,7 @@
 		</div>
 		
 		<div id="permBoxSearch">
-			<input type="text" class="simpleTextfield" placeholder="Rechercher un utilisateur ou un groupe" id="chatBoxInputElement" />
+			<input type="text" class="simpleTextfield" placeholder="Rechercher un utilisateur ou un groupe" id="permBoxSearchElement" />
 			<span>
 				&#x1F50D;
 			</span>
