permission verification in the majority of action added

--- a/views/mindmap/index.ejs
+++ b/views/mindmap/index.ejs
@@ -111,7 +111,7 @@
 				</tr>
 				<tr>
 					<td colspan="2" style="text-align:center;">
-						<input name="editBox_delete" type="button" value="Supprimer"
+						<input name="editBox_delete" type="button" value="Supprimer" id="editBox_deleteButton"
 							   class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"/>
 					</td>
 				</tr>
