--- a/views/mindmap/index.ejs
+++ b/views/mindmap/index.ejs
@@ -1,6 +1,10 @@
 <svg xmlns="http://www.w3.org/2000/svg" id="container"
      style="background-color: #eceff1;"></svg>
-	 
+	
+<div id="notification" class="hidden displaynone ">
+blah blah <a>do sth</a>
+</div>
+	
 <div id="workside">
 
 	<ul id="workselecter">
