--- a/assets/styles/sass/mindmap/mindmap.scss
+++ b/assets/styles/sass/mindmap/mindmap.scss
@@ -67,6 +67,43 @@ g:not([id=""]):hover > circle[name=lx], g:not([id=""]):hover > circle[name=rx] {
   fill: #64b5f6;
 }
 
+#notification {
+    background-color: #2196f3;
+    bottom: 20px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    color: white;
+    font-size: 17px;
+    font-weight: bold;
+    height: 50px;
+    left: 50%;
+    line-height: 50px;
+    margin-left: -200px;
+    position: fixed;
+    text-align: center;
+    width: 400px;
+	opacity:1;
+	transition:opacity 1s;
+	display:block;	
+}
+
+.hidden {
+	opacity:0 !important;
+}
+
+.displaynone {
+	display:none !important;
+}
+
+#notification a {
+    color: white;
+	text-decoration:underline;
+	cursor:pointer;
+}
+
+#notification a:hover {
+	text-decoration:none;
+}
+
 #permBoxSearch {
     display: flex;
     height: 40px;
