--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -45,10 +45,8 @@
 
         </div>
     </div>
-    <div class="col col-xs-12 col-sm-6 col-md-7">
-        <div class="card card-panel card-auth-illustration">
-            <span class="card-title">Une carte mentale sans réfléchir</span>
-        </div>
+    <div class="col col-xs-12 col-sm-6 col-md-7 card card-panel card-auth-illustration">
+        <span class="card-title">Une carte mentale sans réfléchir</span>
     </div>
 </div>
 
