--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,10 +1,8 @@
 <h2 class="center-align">Inscription</h2>
 
 <div class="row">
-    <div class="col col-xs-12 col-sm-6 col-md-8">
-        <div class="card card-panel card-auth-illustration">
-            <span class="card-title">Explorez les cartes que vous aimez</span>
-        </div>
+    <div class="col col-xs-12 col-sm-6 col-md-8 card card-panel card-auth-illustration">
+        <span class="card-title">Explorez les cartes que vous aimez</span>
     </div>
     <div class="col col-xs-12 col-sm-6 col-md-4">
         <div class="card-panel card-signup">
