--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -9,7 +9,7 @@
                 <div class="row">
                     <div class="col input-field col-xs-12">
                         <input id="email" type="email" class="validate" name="mail" required
-                        value="<%= data.inputs.mail ? data.inputs.mail : '' %>">
+                               value="<%= data.inputs.mail ? data.inputs.mail : '' %>">
                         <label for="email">Adresse e-mail</label>
                     </div>
                 </div>
@@ -34,11 +34,14 @@
 
             <div class="row" style="margin-bottom: 0">
                 <div class="col-lg-12 center-align">
-                    <a href="http://mindmap.finch4.xyz/auth/google" class="btn btn-social btn-social-googleplus waves-effect waves-light">
+                    <a href="http://mindmap.finch4.xyz/auth/google"
+                       class="btn btn-social btn-social-googleplus waves-effect waves-light">
                         <i class="flaticon-google116 left"></i>&nbsp;Google+</a>
-                    <a href="http://mindmap.finch4.xyz/auth/twitter" class="btn btn-social btn-social-twitter waves-effect waves-light">
+                    <a href="http://mindmap.finch4.xyz/auth/twitter"
+                       class="btn btn-social btn-social-twitter waves-effect waves-light">
                         <i class="flaticon-twitter20 left"></i>&nbsp;Twitter</a>
-                    <a href="http://mindmap.finch4.xyz/auth/facebook" class="btn btn-social btn-social-facebook waves-effect waves-light">
+                    <a href="http://mindmap.finch4.xyz/auth/facebook"
+                       class="btn btn-social btn-social-facebook waves-effect waves-light">
                         <i class="flaticon-facebook31 left"></i>&nbsp;Facebook</a>
                 </div>
             </div>
