--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -7,54 +7,55 @@
     <div class="col col-xs-12 col-sm-6 col-md-4">
         <div class="card-panel card-signup">
             <h5 class="center-align">Inscription</h5>
-                <form class="signup" action="/auth/process/signup" method="post">
+            <form class="signup" action="/auth/process/signup" method="post">
 
-                    <div class="row">
-                        <div class="col input-field col-xs-12">
-                            <input id="input-lastname" type="text" class="validate" name="lastname" required
-                            value="<%= data.inputs.lastname ? data.inputs.lastname : '' %>">
-                            <label for="input-lastname">Nom</label>
-                        </div>
+                <div class="row">
+                    <div class="col input-field col-xs-12">
+                        <input id="input-lastname" type="text" class="validate" name="lastname" required
+                               value="<%= data.inputs.lastname ? data.inputs.lastname : '' %>">
+                        <label for="input-lastname">Nom</label>
                     </div>
+                </div>
 
-                    <div class="row">
-                        <div class="col input-field col-xs-12">
-                            <input id="input-firstname" type="text" class="validate" name="firstname" required
-                            value="<%= data.inputs.firstname ? data.inputs.firstname : '' %>">
-                            <label for="input-firstname">Prénom</label>
-                        </div>
+                <div class="row">
+                    <div class="col input-field col-xs-12">
+                        <input id="input-firstname" type="text" class="validate" name="firstname" required
+                               value="<%= data.inputs.firstname ? data.inputs.firstname : '' %>">
+                        <label for="input-firstname">Prénom</label>
                     </div>
+                </div>
 
-                    <div class="row">
-                        <div class="col input-field col-xs-12">
-                            <input id="input-mail" type="email" class="validate" name="mail" required
-                           value="<%= data.inputs.mail ? data.inputs.mail : '' %>">
-                            <label for="input-mail">Adresse e-mail</label>
-                        </div>
+                <div class="row">
+                    <div class="col input-field col-xs-12">
+                        <input id="input-mail" type="email" class="validate" name="mail" required
+                               value="<%= data.inputs.mail ? data.inputs.mail : '' %>">
+                        <label for="input-mail">Adresse e-mail</label>
                     </div>
+                </div>
 
-                    <div class="row">
-                        <div class="col input-field col-xs-12">
-                            <input id="input-password" type="password" class="validate" name="password" required>
-                            <label for="input-password">Mot de passe</label>
-                        </div>
+                <div class="row">
+                    <div class="col input-field col-xs-12">
+                        <input id="input-password" type="password" class="validate" name="password" required>
+                        <label for="input-password">Mot de passe</label>
                     </div>
+                </div>
 
-                    <div class="row">
-                        <div class="col input-field col-xs-12">
-                            <input id="input-password_confirmation" type="password" class="validate" name="password_confirmation" required>
-                            <label for="input-password_confirmation">Mot de passe</label>
-                        </div>
+                <div class="row">
+                    <div class="col input-field col-xs-12">
+                        <input id="input-password_confirmation" type="password" class="validate"
+                               name="password_confirmation" required>
+                        <label for="input-password_confirmation">Mot de passe</label>
                     </div>
+                </div>
 
-                    <div class="row">
-                        <div class="col input-field col-xs-12" style="justify-content: center;text-align:center;">
-                            <button class="btn blue waves-effect waves-light" type="submit" name="action">S'inscrire
-                                <i class="material-icons right">send</i>
-                            </button>
-                        </div>
+                <div class="row">
+                    <div class="col input-field col-xs-12" style="justify-content: center;text-align:center;">
+                        <button class="btn blue waves-effect waves-light" type="submit" name="action">S'inscrire
+                            <i class="material-icons right">send</i>
+                        </button>
                     </div>
-                </form>
+                </div>
+            </form>
             </section>
         </div>
     </div>
