revBox revisions list UI fixed (material icon caused width problem)

--- a/assets/styles/sass/mindmap/mindmap.scss
+++ b/assets/styles/sass/mindmap/mindmap.scss
@@ -491,6 +491,7 @@ color:#2196f3;
     min-height: 220px;
     max-height: 300px;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 #revBoxStack > ul {
