previous commit fail fixed

--- a/views/mindmap/index.ejs
+++ b/views/mindmap/index.ejs
@@ -20,7 +20,10 @@ blah blah <a>do sth</a>
 			Historique des révisions
 		</div>
 		<div id="revBoxStack">
-			<ul>
+			<div id="revBoxViewPicker">
+				<button id="revBoxViewPickerAll" class="selected">Tout les noeuds</button><button id="revBoxViewPickerNode">Noeud courrant</button>
+			</div>
+			<ul id="revBoxStackElement">
 
 				<li>
 					<span><a>Noeud #023</a> - Édition - Label<button><i class="material-icons">history</i></button></span>
