--- a/views/mindmap/index.ejs
+++ b/views/mindmap/index.ejs
@@ -138,7 +138,7 @@ blah blah <a>do sth</a>
 							<option name="Roboto" style="font-family:Roboto;">Roboto</option>
 							<option name="Verdana" style="font-family:Verdana;">Verdana</option>
 
-							<option style="font-family: sans-serif;" onclick="var p = this.parentNode.children.item(0);var f = prompt('Entrer le nom d\'une police');p.innerHTML = f;p.style.fontFamily = f;p.setAttribute('name',f);p.style.display='';p.selected=true;p.parentNode.onchange();" >Autre</option>
+							<option id="chooseOtherFont" style="font-family: sans-serif;" >Autre</option>
 						</select>				
 
 					</td>
@@ -150,8 +150,7 @@ blah blah <a>do sth</a>
 
 					<td>
 					
-						<input onchange="var c = document.getElementById('editBox_color');var f= c.selectedOptions[0].getAttribute('name');if(f == null)return; c.value = this.value; var p = c.children.item(0);p.innerHTML = '&#x1F532; ' + this.value;p.style.color = this.value;p.setAttribute('name',this.value);p.style.display='';p.selected=true;c.onchange();"
-							id="colorpicker" style="display:none;" type="color" />
+						<input id="colorpicker" style="display:none;" type="color" />
 									   
 						<select id="editBox_color" class="browser-default" name="editBox_color">
 							<option style="display:none;"></option>
@@ -160,7 +159,7 @@ blah blah <a>do sth</a>
 							<option name="#8bc34a" style="color:#8bc34a;">&#x1F532; Vert</option>
 							<option name="#2196f3" style="color:#2196f3;">&#x1F532; Bleu</option>
 
-							<option style="color:black;" onclick="document.getElementById('colorpicker').click();"> Autre</option>
+							<option style="color:black;"> Autre</option>
 
 						</select>	
 
