global rights UX introduced

--- a/views/mindmap/index.ejs
+++ b/views/mindmap/index.ejs
@@ -18,6 +18,7 @@ blah blah <a>do sth</a>
 		<div class="boxTitle">
 			<div class="boxSelecter">&#x25BE;<i class="material-icons">history</i> </div>
 			Historique des révisions
+			<i class="boxCloser material-icons">close</i>
 		</div>
 		<div id="revBoxStack">
 			<div id="revBoxViewPicker">
@@ -71,7 +72,8 @@ blah blah <a>do sth</a>
 
 		<div class="boxTitle">
 			<div class="boxSelecter">&#x25BE;<i class="material-icons">verified_user</i> </div>
-			Permissions d'un noeud
+			<span id="permBoxTitle">Permissions d'un noeud</span>
+			<i class="boxCloser material-icons">close</i>
 		</div>
 		
 		<div id="permBoxSearch">
@@ -89,6 +91,7 @@ blah blah <a>do sth</a>
 		<div class="boxTitle">
 			<div class="boxSelecter">&#x25BE;<i class="material-icons">create</i> </div>
 			Édition d'un noeud
+			<i class="boxCloser material-icons">close</i>
 		</div>
 
 		<form id="editBoxForm">
