--- a/views/partials/user_navigation.ejs
+++ b/views/partials/user_navigation.ejs
@@ -1,6 +1,7 @@
 <% if(req.isAuthenticated()) { %>
 <ul id="nav-mobile" class="right hide-on-med-and-down">
     <li><a href="/explorer">Mes cartes</a></li>
+    <li><a href="/groups">Mes groupes</a></li>
     <li>
         <a class="dropdown-button" data-activates="dropdown-user" data-beloworigin="true">
             <img class="avatar left" src="<%- req.user.img_url || ('/images/default/' + (req.user.display_name.charAt(0).toLowerCase()) + '.png') %>">
@@ -9,6 +10,7 @@
             <i class="material-icons right">arrow_drop_down</i>
         </a>
         <ul id='dropdown-user' class='dropdown-content'>
+
             <li><a href='/auth/process/logout'>Se déconnecter</a></li>
         </ul>
     </li>
@@ -16,6 +18,7 @@
 
 <ul class="side-nav" id="mobile-demo">
     <li><a href="/explorer">Mes cartes</a></li>
+    <li><a href="/groups">Mes groupes</a></li>
     <li><a href='/auth/process/logout'>Se déconnecter</a></li>
 </ul>
 
