--- a/views/layouts/explorer.ejs
+++ b/views/layouts/explorer.ejs
@@ -9,7 +9,7 @@
     <!--STYLES END-->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/flexboxgrid/6.3.0/flexboxgrid.min.css" type="text/css" >
 </head>
-<body>
+<body style="overflow-y:scroll">
     <nav class="blue">
         <div class="container nav-wrapper">
             <ul class="left">
@@ -29,7 +29,7 @@
         </div>
     </nav>
 
-    <main class="section">
+    <main class="section no-pad-top">
         <%- body %>
     </main>
 
